fix dark mode

--- a/src/Styles/themes/_dark.scss
+++ b/src/Styles/themes/_dark.scss
@@ -6,7 +6,7 @@
   --app-container: #111827;
   --main-color: #fff;
   --secondary-color: rgba(255, 255, 255, 0.8);
-  --projects-section: #1f2937;
+  --main-section: #1f2937;
   --link-color: rgba(255, 255, 255, 0.8);
   --link-color-hover: rgba(195, 207, 244, 0.1);
   --link-color-active-bg: rgba(195, 207, 244, 0.2);
